# devaps

./: .gitignore  Els.txt  I350N.go  README.md  a.out  abspath.go  argparse.rs  brainfuck.c  cat.go  class.c  color.go  control.go  ctc.c  ctc.rs  elements.go  fpwd.go  glub.go  gs.go  gs.rs  gtk.go  hello.350  hottie-new  hottie-new.c  hottie.c  lev.c  lev.rs  lister.go  ls.go  mather.c  pager.go  sendmail.py  simple.c  simple.h  sonar.py  spwd.go  temp  temp.c  temp.go  temp.rs  temp2.rs  (+6 more)
filstu/: Cargo.toml
filstu/src/: lib.rs  main.rs
filte-rs/: Cargo.toml
filte-rs-old/: Cargo.toml
filte-rs-old/src/: filter.rs
filte-rs/src/: lib.rs  main.rs  map.rs
fpwd-rs/gs-rs/: Cargo.toml
fpwd-rs/pwd-rs/: Cargo.toml
fpwd-rs/pwd-rs/src/: lib.rs  main.rs
fpwd-rs/pwd-rs/src/daemon/: main.rs
fpwd-rs/pwd-rs/src/standalone/: main.rs
fpwe/gs-rs/src/: main.rs
fpwe/gs2-rs/: Cargo.toml  README.MD
fpwe/gs2-rs/src/: lib.rs  main.rs
fpwe/pwd-rs/: Cargo.toml
fpwe/pwd-rs/src/: lib.rs
legacy/: elements.go  gs.go  lister.go  pager.go  simple.go
rot/: Cargo.toml
rot/graphs/: 1-n.dot  cyclic.dot  line.dot  link-prop.dot  n-1.dot  node-implicit.dot  node-prop.dot
rot/src/: export.rs  lib.rs  main.rs
runner/: .gitignore  runner.cfg
runner/src/: main.rs
tester/: Cargo.toml  ctc.test
tester/src/: main.rs
tmpl/: Cargo.toml
tmpl/src/: lib.rs  main.rs
todos/: Cargo.toml
todos/src/: lib.rs  main.rs
