[package]
name = "pwd-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fpwd-daemon"
path = "src/daemon/main.rs"

[[bin]]
name = "pwd-rs"
path = "src/standalone/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde-lexpr = "0.1.3"

[profile.release]
opt-level = "s"  # Optimize for size.
strip = true  # Automatically strip symbols from the binary.
panic = "abort"
lto = true
